* avoid multiple connections * use a QPointer to prevent unsightly crashes * attempt to clean up when the download dialog is deleted; doesn't really work though as signals are getting blocked somewhere under certain conditions :/

not going to backport this one as it's not trivial enough and really needs testing
CCMAIL:jeremy@scitools.com
BUG:198421

svn path=/trunk/KDE/kdelibs/; revision=990702